# focus_flow

./: pyproject.toml
app/: main.py  streaming.py
app/templates/: student.html  student_stream.html  teacher_analytics.html  teacher_stream.html
