[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["aashu singh <buildithunter1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.128.0"}
psycopg = {extras = ["binary"], version = "^3.3.2"}
httpx = "^0.28.1"
aiofiles = "^25.1.0"
python-multipart = "^0.0.21"
jinja2 = "^3.1.6"
slowapi = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
